# cmake-project-template-conda

./: CMakeLists.txt  README.md
